--- a/Assignment-7/part5/index.html
+++ b/Assignment-7/part5/index.html
@@ -3,9 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Assignment 07 - Part 5</title>
-    <script src="js/dom-practice.js"></script>
 </head>
 <body>
-    
+    <section>
+        <p>old school HTML attribute method</p>
+        <button onclick="displayMessage()">Show Message</button>
+    </section>
+
+    <section>
+        <p>Element Property method</p>
+        <button id="myButton">Show Message</button>
+    </section>
+
+    <script src="js/dom-practice.js"></script>
 </body>
 </html>
