--- a/Assignment-7/part5/index.html
+++ b/Assignment-7/part5/index.html
@@ -6,15 +6,41 @@
 </head>
 <body>
     <section>
-        <p>old school HTML attribute method</p>
+        <p>Old school HTML attribute method</p>
         <button onclick="displayMessage()">Show Message</button>
     </section>
+
+    <hr>
 
     <section>
         <p>Element Property method</p>
         <button id="myButton">Show Message</button>
     </section>
 
+    <hr>
+
+    <section>
+        <p>Event Listener method (User Defined Function)</p>
+        <button id="myOtherButton">Show Message</button>
+    </section>
+
+    <hr>
+
+    <section>
+        <p>Event Listener method (Callback Function)</p>
+        <button id="myOtherButton2">Show Message</button>
+    </section>
+    
+    <hr>
+
     <script src="js/dom-practice.js"></script>
+
+    <section>
+        <p>Event Listener method (will work with script within the head tag function)</p>
+        <button id="myOtherButton3">Show Message</button>
+    </section>
+    
+    <hr>
+
 </body>
 </html>
